--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.75 2004/08/17 14:30:20 krzyzak Exp $
+dnl $Id: configure.in,v 1.76 2004/08/17 15:00:08 krzyzak Exp $
 
 m4_define([gg2_version],[2.0.4])
 
@@ -116,25 +116,27 @@ if test x$with_gdb = xyes; then
  CFLAGS="$CFLAGS -ggdb"
 fi
 
-with_gui=yes
-with_gghist=yes
-with_gtkspell=yes
-with_gadu=yes
-with_tlen=yes
-with_jabber=yes
-with_xosd=yes
-with_sms=yes
-with_remote=yes
-with_esd=yes
-with_oss=yes
-with_arts=no
-with_external=yes
-with_external_libgadu=no
-with_history_external_viewer=yes
-with_update=yes
-with_docklet_system_tray=yes
-with_docklet_dockapp=yes
-with_perl=no
+dnl not working only for information
+
+dnl with_gui=yes
+dnl with_gghist=yes
+dnl with_gtkspell=yes
+dnl with_gadu=yes
+dnl with_tlen=yes
+dnl with_jabber=yes
+dnl with_xosd=yes
+dnl with_sms=yes
+dnl with_remote=yes
+dnl with_esd=yes
+dnl with_oss=yes
+dnl with_arts=no
+dnl with_external=yes
+dnl with_external_libgadu=no
+dnl with_history_external_viewer=yes
+dnl with_update=yes
+dnl with_docklet_system_tray=yes
+dnl with_docklet_dockapp=yes
+dnl with_perl=no
 
 AC_ARG_WITH(all_plugins, [  --with-all-plugins	  Build all plugins with all features		default=no])
 if test x$with_all_plugins = xyes; then
@@ -183,6 +185,8 @@ if test x$with_perl = xyes; then
         AC_SUBST(PERL_OPTION_LDFLAGS)
         CFLAGS="$CFLAGS $PERL_OPTION_CFLAGS"
     fi
+else
+    with_perl=no
 fi
 
 dnl if test "x$with_perl" = "xyes"; then
@@ -194,7 +198,7 @@ dnl       PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lposix //'`
 dnl       PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lc //'`
 dnl fi
 
-AC_ARG_WITH(gghist, [  --with-gghist		  Build gghist		default=no])
+AC_ARG_WITH(gghist, [  --with-gghist		  Build gghist		default=yes])
 if test "x$with_gghist" = "xyes"; then 
     PKG_CHECK_MODULES(GTK,gtk+-2.0 >= 2.2.0,[],AC_MSG_ERROR($GTK_PKG_ERRORS))
     AC_SUBST(GTK_CFLAGS)
@@ -203,7 +207,7 @@ else
     with_gghist=no
 fi
 
-AC_ARG_WITH(gui, [  --with-gui		  Build gtk2 GUI plugin		default=no])
+AC_ARG_WITH(gui, [  --with-gui		  Build gtk2 GUI plugin		default=yes])
 if test "x$with_gui" = "xyes"; then 
     PKG_CHECK_MODULES(GTK,gtk+-2.0 >= 2.2.0,[],AC_MSG_ERROR($GTK_PKG_ERRORS))
     AC_SUBST(GTK_CFLAGS)
@@ -212,11 +216,11 @@ else
     with_gui=no
 fi
 
-AC_ARG_WITH(gtkspell, [  --with-gtkspell	  Build GUI plugin with gtkspell support 	default=no])
+AC_ARG_WITH(gtkspell, [  --with-gtkspell	  Build GUI plugin with gtkspell support 	default=yes])
 if test "x$with_gtkspell" = "xyes"; then 
     PKG_CHECK_MODULES(GTKSPELL,gtkspell-2.0 >= 2.0.0,[],with_gtkspell=no)
     if test "$with_gtkspell" = "no"; then 
-    	AC_MSG_WARN([*** gtkspell support has been disabled ***])
+    	AC_MSG_ERROR([*** unable to find gtkspell (http://gtkspell.sourceforge.net/) ***])
     fi
     AC_SUBST(GTKSPELL_CFLAGS)
     AC_SUBST(GTKSPELL_LIBS)
@@ -224,7 +228,7 @@ else
     with_gtkspell=no
 fi
 
-AC_ARG_WITH(gadu, [  --with-gadu		  Build gadu-gadu plugin	default=no])
+AC_ARG_WITH(gadu, [  --with-gadu		  Build gadu-gadu plugin	default=yes])
 AC_ARG_WITH(external_libgadu, [  --with-external-libgadu	Build gadu-gadu plugin with external libgadu default=no])
 
 if test "x$with_external_libgadu" = "xyes"; then 
@@ -257,33 +261,34 @@ else
     with_gadu=no
 fi
 
-AC_ARG_WITH(tlen, [  --with-tlen		  Build tlen plugin		default=no])
+AC_ARG_WITH(tlen, [  --with-tlen		  Build tlen plugin		default=yes])
 if test "x$with_tlen" = "xyes"; then 
     AC_CHECK_LIB([tlen], [tlen_set_hub_blocking], with_tlen=yes, with_tlen=no)
     if test "x$with_tlen" != "xno"; then
 	AC_CHECK_HEADERS(libtlen/libtlen.h)
 	TLEN_LIBS="-ltlen -lm"
 	AC_SUBST(TLEN_LIBS)
+    else
+    	AC_MSG_ERROR([*** unable to find libtlen (http://www.libtlen.eu.org/) ***])
     fi
 else
     with_tlen=no
 fi
 
-AC_ARG_WITH(jabber, [  --with-jabber		  Build jabber plugin		default=no])
+AC_ARG_WITH(jabber, [  --with-jabber		  Build jabber plugin		default=yes])
 if test "x$with_jabber" = "xyes"; then 
     PKG_CHECK_MODULES(JABBER,loudmouth-1.0 >= 0.16, [],with_jabber=no)
     if test "$with_jabber" = "no"; then 
-    	AC_MSG_WARN($JABBER_PKG_ERRORS)
 	echo
 	echo "**********************************************************"
 	echo 
-	echo "Jabber plugin has been disabled!"
+	echo "Jabber plugin need loudmouth!"
 	echo "You don't have loudmouth installed (or you have wrong version)"
 	echo "Please download loudmouth: http://www.imendio.com/projects/loudmouth/"
 	echo 
 	echo "**********************************************************"
 	echo
-
+    	AC_MSG_ERROR($JABBER_PKG_ERRORS)
     fi
     AC_CHECK_LIB([loudmouth],[lm_connection_set_jid],new_loudmouth=yes,new_loudmouth=no)
     AC_DEFINE(BUILD_WITH_NEW_LOUDMOUTH)
@@ -293,7 +298,7 @@ else
     with_jabber=no
 fi
 
-AC_ARG_WITH(xosd, [  --with-xosd		  Build XOSD plugin		default=no])
+AC_ARG_WITH(xosd, [  --with-xosd		  Build XOSD plugin		default=yes])
 if test "x$with_xosd" = "xyes"; then 
     AC_PATH_PROG(xosd_config_script, xosd-config, "none")
     
@@ -311,33 +316,34 @@ if test "x$with_xosd" = "xyes"; then
 	    AC_SUBST(XOSD_CFLAGS)
 	fi
     else
+    	AC_MSG_ERROR([*** unable to find XOSD library (http://www.ignavus.net/software.html) ***])
 	with_xosd=no
     fi
 else
     with_xosd=no
 fi
 
-AC_ARG_WITH(sms, [  --with-sms		  Build sms plugin		default=no])
+AC_ARG_WITH(sms, [  --with-sms		  Build sms plugin		default=yes])
 if test "x$with_sms" = "xyes"; then 
 	with_sms=yes
     else
 	with_sms=no
 fi
 
-AC_ARG_WITH(remote, [  --with-remote		  Build remote plugin		default=no])
+AC_ARG_WITH(remote, [  --with-remote		  Build remote plugin		default=yes])
 if test "x$with_remote" = "xyes"; then 
 	with_remote=yes
-	else
+else
 	with_remote=no
 fi
 
 
-AC_ARG_WITH(docklet_system_tray, [  --with-docklet-system-tray	  Build docklet plugin		default=no])
+AC_ARG_WITH(docklet_system_tray, [  --with-docklet-system-tray	  Build docklet plugin		default=yes])
 if test "x$with_docklet_system_tray" = "xyes"; then 
     with_docklet_system_tray=yes
     PKG_CHECK_MODULES(GTK,gtk+-2.0 >= 2.2.0, [], with_docklet_system_tray=no)
     if test "$with_docklet_system_tray" = "no"; then 
-    	AC_MSG_WARN($GTK_PKG_ERRORS)
+    	AC_MSG_ERROR($GTK_PKG_ERRORS)
     fi
     AC_SUBST(GTK_CFLAGS)
     AC_SUBST(GTK_LIBS)
@@ -345,12 +351,12 @@ else
     with_docklet_system_tray=no
 fi
 
-AC_ARG_WITH(docklet_dockapp, [  --with-docklet-dockapp	  Build dockapp plugin		default=no])
+AC_ARG_WITH(docklet_dockapp, [  --with-docklet-dockapp	  Build dockapp plugin		default=yes])
 if test "x$with_docklet_dockapp" = "xyes"; then 
     with_docklet_dockapp=yes
     PKG_CHECK_MODULES(GTK,gtk+-2.0 >= 2.2.0, [], with_docklet_dockapp=no)
     if test "$with_docklet_dockapp" = "no"; then 
-    	AC_MSG_WARN($GTK_PKG_ERRORS)
+    	AC_MSG_ERROR($GTK_PKG_ERRORS)
     fi
     AC_SUBST(GTK_CFLAGS)
     AC_SUBST(GTK_LIBS)
@@ -358,11 +364,11 @@ else
     with_docklet_dockapp=no
 fi
 
-AC_ARG_WITH(esd, [  --with-esd		  Build esd sound plugin	default=no])
+AC_ARG_WITH(esd, [  --with-esd		  Build esd sound plugin	default=yes])
 if test "x$with_esd" = "xyes"; then
     have_libesd=no
     AM_PATH_ESD(0.2.7 ,have_libesd=yes,
-    [AC_MSG_WARN([*** sound support for esd has been disabled ***])])
+    [AC_MSG_ERROR([*** sound support for esd need EsounD installed (http://www.tux.org/~ricdude/EsounD.html) ***])])
     
     if test "$have_libesd" = yes; then
 	AC_SUBST(ESD_CFLAGS)
@@ -388,7 +394,7 @@ if test "x$with_arts" = "xyes"; then
     CFLAGS="$CFLAGS $arts_include_path"
     CPPFLAGS="$CPPLAGS $arts_include_path"
     AC_CHECK_HEADERS(arts/artsversion.h, have_arts=yes,
-    [AC_MSG_WARN([*** sound support for aRts! has been disabled ***])],-)
+    [AC_MSG_ERROR([*** sound support for aRts! - unable to find aRts! headers ***])],-)
 
     if test "x$have_arts" = "xyes"; then
         ARTS_CXXFLAGS="$CXXFLAGS $arts_include_path"
@@ -403,7 +409,7 @@ else
     with_arts=no
 fi
 
-AC_ARG_WITH(oss, [  --with-oss		  Build OSS sound plugin	default=no])
+AC_ARG_WITH(oss, [  --with-oss		  Build OSS sound plugin	default=yes])
 if test "x$with_oss" = "xyes"; then
     have_soundcardh=no
     AC_CHECK_HEADERS(sys/soundcard.h, have_soundcardh=yes, have_soundcardh=no)
@@ -411,26 +417,27 @@ if test "x$with_oss" = "xyes"; then
 	with_oss=yes
     else
 	with_oss=no
+    	AC_MSG_ERROR([*** unable to find sys/soundcard.h headers ***])
     fi
 else
     with_oss=no
 fi
 
-AC_ARG_WITH(external, [  --with-external	  Build external player sound plugin	default=no])
+AC_ARG_WITH(external, [  --with-external	  Build external player sound plugin	default=yes])
 if test "x$with_external" = "xyes"; then
     with_external=yes
 else
     with_external=no
 fi
 
-AC_ARG_WITH(history_external_viewer, [  --with-history-external-viewer	  Build external history plugin	default=no])
+AC_ARG_WITH(history_external_viewer, [  --with-history-external-viewer	  Build external history plugin	default=yes])
 if test "x$with_history_external_viewer" = "xyes"; then
     with_history_external_viewer=yes
 else
     with_history_external_viewer=no
 fi
 
-AC_ARG_WITH(update, [  --with-update		  Build update plugin		default=no])
+AC_ARG_WITH(update, [  --with-update		  Build update plugin		default=yes])
 if test "x$with_update" = "xyes"; then 
 	with_update=yes
 else
