- fixes of configuration options used with included libgadu (krzak)

--- a/config.h.in
+++ b/config.h.in
@@ -4,6 +4,13 @@
 #undef PACKAGE
 #undef VERSION
 #undef GGADU_DEBUG
+#undef ICONV_CONST
+#undef ENABLE_NLS
+#undef WORDS_BIGENDIAN
+#undef PERL_EMBED
+#undef INSTALLPREFIX
+#undef BUILD_WITH_NEW_LOUDMOUTH
+#undef HAVE_LONG_LONG
 #undef HAVE_STDINT_H
 #undef HAVE_STDLIB_H
 #undef HAVE_INTMAX_T
@@ -17,12 +24,10 @@
 #undef HAVE_NL_TYPES_H
 #undef HAVE_MALLOC_H
 #undef HAVE___SECURE_GETENV
-#undef ICONV_CONST
 #undef HAVE_STRNCASECMP
 #undef HAVE_STRINGS_H
 #undef HAVE_STRING_H
-#undef ENABLE_NLS
-#undef WORDS_BIGENDIAN
-#undef PERL_EMBED
-#undef INSTALLPREFIX
-#undef BUILD_WITH_NEW_LOUDMOUTH
+#undef HAVE_VA_COPY
+#undef HAVE___VA_COPY
+#undef HAVE_C99_VSNPRINTF
+
